syntax = "proto3";

option csharp_namespace = "MyGreetingService.Common";

service WorkerIntegration {
	rpc GetWorkerStream (EmptyMessage) returns (stream WorkerAction);
	rpc GetWorkers(EmptyMessage) returns (WorkerList);
	rpc CreateWorker (WorkerMessage) returns (EmptyMessage);
	rpc UpdateWorker (WorkerMessage) returns (EmptyMessage);
	rpc DeleteWorker (WorkerMessage) returns (EmptyMessage);
}

message EmptyMessage
{

}

message WorkerAction
{
	WorkerMessage worker = 1;
	Action actionType = 2;
}

message WorkerMessage
{
	int64 id = 1;
	string LastName = 2;
	string FirstName = 3;
	string MiddleName = 4;
	int64 Birthday = 5;
	Sex Sex = 6;
	bool HaveChildren = 7;
}

message WorkerList {
  repeated WorkerMessage workers = 1;
}

enum Sex {
	DefaultSex = 0;
	Male = 1;
	Female = 2;
}

enum Action {
	DefaultAction = 0;
	Create = 1;
	Update = 2;
	Delete = 3;
}